--- a/workflow.yaml
+++ b/workflow.yaml
@@ -2,15 +2,15 @@ Comment: >-
   A Hello World example demonstrating various state types of the Amazon States
   Language. It is composed of flow control states only, so it does not need
   resources to run.
-StartAt: Lambda Invoke on S3 PUT
+StartAt: rekognition
 States:
-  Lambda Invoke on S3 PUT:
+  rekognition:
     Type: Task
     Resource: arn:aws:states:::lambda:invoke
     OutputPath: $.Payload
     Parameters:
       Payload.$: $
-      FunctionName: arn:aws:lambda:us-east-1:712887588535:function:projectInvokeS3:$LATEST
+      FunctionName: arn:aws:lambda:us-east-1:750470523092:function:rekognition:$LATEST
     Retry:
       - ErrorEquals:
           - Lambda.ServiceException
@@ -24,16 +24,16 @@ States:
   Parallel:
     Type: Parallel
     Branches:
-      - StartAt: Filter Violence
+      - StartAt: filter_violence
         States:
-          Filter Violence:
+          filter_violence:
             Type: Task
             Resource: arn:aws:states:::lambda:invoke
             OutputPath: $.Payload
             Parameters:
               Payload.$: $
               FunctionName: >-
-                arn:aws:lambda:us-east-1:712887588535:function:projectFilterViolence:$LATEST
+                arn:aws:lambda:us-east-1:750470523092:function:filterViolence:$LATEST
             Retry:
               - ErrorEquals:
                   - Lambda.ServiceException
@@ -50,17 +50,17 @@ States:
             Choices:
               - Variable: $.fightingPresent
                 BooleanEquals: true
-                Next: Create description and export video (1)
+                Next: upload_police_report
           Success:
             Type: Succeed
-          Create description and export video (1):
+          upload_police_report:
             Type: Task
             Resource: arn:aws:states:::lambda:invoke
             OutputPath: $.Payload
             Parameters:
               Payload.$: $
               FunctionName: >-
-                arn:aws:lambda:us-east-1:712887588535:function:projectExportVideoCreateDescpriptionPolice:$LATEST
+                arn:aws:lambda:us-east-1:750470523092:function:upload_police_report:$LATEST
             Retry:
               - ErrorEquals:
                   - Lambda.ServiceException
@@ -71,16 +71,16 @@ States:
                 MaxAttempts: 3
                 BackoffRate: 2
             End: true
-      - StartAt: Filter Fire
+      - StartAt: filter_fire
         States:
-          Filter Fire:
+          filter_fire:
             Type: Task
             Resource: arn:aws:states:::lambda:invoke
             OutputPath: $.Payload
             Parameters:
               Payload.$: $
               FunctionName: >-
-                arn:aws:lambda:us-east-1:712887588535:function:projectFilterFire:$LATEST
+                arn:aws:lambda:us-east-1:750470523092:function:filterFire:$LATEST
             Retry:
               - ErrorEquals:
                   - Lambda.ServiceException
@@ -96,18 +96,18 @@ States:
             Choices:
               - Variable: $.firePresent
                 BooleanEquals: true
-                Next: Create description and export video
+                Next: upload_firedepartment_report
             Default: Success (1)
           Success (1):
             Type: Succeed
-          Create description and export video:
+          upload_firedepartment_report:
             Type: Task
             Resource: arn:aws:states:::lambda:invoke
             OutputPath: $.Payload
             Parameters:
               Payload.$: $
               FunctionName: >-
-                arn:aws:lambda:us-east-1:712887588535:function:projectCreateDescriptionAndExportVideo:$LATEST
+                arn:aws:lambda:us-east-1:750470523092:function:upload_firedepartment_report:$LATEST
             Retry:
               - ErrorEquals:
                   - Lambda.ServiceException
@@ -118,16 +118,16 @@ States:
                 MaxAttempts: 3
                 BackoffRate: 2
             End: true
-      - StartAt: FilterSomikingPerson
+      - StartAt: filter_smoking_person
         States:
-          FilterSomikingPerson:
+          filter_smoking_person:
             Type: Task
             Resource: arn:aws:states:::lambda:invoke
             OutputPath: $.Payload
             Parameters:
               Payload.$: $
               FunctionName: >-
-                arn:aws:lambda:us-east-1:712887588535:function:projectFilterPerson:$LATEST
+                arn:aws:lambda:us-east-1:750470523092:function:filterSmokingPerson:$LATEST
             Retry:
               - ErrorEquals:
                   - Lambda.ServiceException
@@ -143,16 +143,16 @@ States:
             Choices:
               - Variable: $.personSmoking
                 BooleanEquals: true
-                Next: perform Post on Billboards
+                Next: post_on_billboard
             Default: Success (2)
-          perform Post on Billboards:
+          post_on_billboard:
             Type: Task
             Resource: arn:aws:states:::lambda:invoke
             OutputPath: $.Payload
             Parameters:
               Payload.$: $
               FunctionName: >-
-                arn:aws:lambda:us-east-1:712887588535:function:projectPostOnBillboards:$LATEST
+                arn:aws:lambda:us-east-1:750470523092:function:performPostonBillboards:$LATEST
             Retry:
               - ErrorEquals:
                   - Lambda.ServiceException
