--- a/workflow.yaml
+++ b/workflow.yaml
@@ -60,6 +60,7 @@ States:
                 Attention! There was violence detected. Go to the Smart City
                 Monitoring Website to see further information
             Next: Create description and export video (1)
+            ResultPath: null
           Success:
             Type: Succeed
           Create description and export video (1):
@@ -113,9 +114,10 @@ States:
             Parameters:
               TopicArn: arn:aws:sns:us-east-1:565390098582:Fire
               Message: >-
-                Attention! There was violence detected. Go to the Smart City
+                Attention! There was fire detected. Go to the Smart City
                 Monitoring Website to see further information
             Next: Create description and export video
+            ResultPath: null
           Success (1):
             Type: Succeed
           Create description and export video:
